Remove header package combinations from package matrix

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3346,178 +3346,11 @@ build_clang_frontend_6.0.1_gcc8_build_type=Release+shared=True:
   tags:
   - linux
   - docker
-build_clang_headers_6.0.1_clang60_build_type=Release+shared=False:
+build_clang_headers_6.0.1:
   image: conanio/clang60
   script:
   - conan profile update settings.build_type=Release default
-  - CONAN_VERSION_OVERRIDE=6.0.1 conan create --profile=default -o llvm:shared=False
-    -o compiler-rt:shared=False -o clang:shared=False -o llvm_headers:shared=False
-    -o clang_headers:shared=False clang_headers clang_headers/6.0.1@Manu343726/testing
-    --build=missing --build=clang_headers
-  - conan remove -b -s -f "*"
-  - conan upload clang_headers/6.0.1@Manu343726/testing -r Manu343726 --all --force
-    --retry 3
-  stage: clang_headers
-  tags:
-  - linux
-  - docker
-build_clang_headers_6.0.1_clang60_build_type=Release+shared=True:
-  image: conanio/clang60
-  script:
-  - conan profile update settings.build_type=Release default
-  - CONAN_VERSION_OVERRIDE=6.0.1 conan create --profile=default -o llvm:shared=True
-    -o compiler-rt:shared=True -o clang:shared=True -o llvm_headers:shared=True -o
-    clang_headers:shared=True clang_headers clang_headers/6.0.1@Manu343726/testing
-    --build=missing --build=clang_headers
-  - conan remove -b -s -f "*"
-  - conan upload clang_headers/6.0.1@Manu343726/testing -r Manu343726 --all --force
-    --retry 3
-  stage: clang_headers
-  tags:
-  - linux
-  - docker
-build_clang_headers_6.0.1_clang7_build_type=Release+shared=False:
-  image: conanio/clang7
-  script:
-  - conan profile update settings.build_type=Release default
-  - CONAN_VERSION_OVERRIDE=6.0.1 conan create --profile=default -o llvm:shared=False
-    -o compiler-rt:shared=False -o clang:shared=False -o llvm_headers:shared=False
-    -o clang_headers:shared=False clang_headers clang_headers/6.0.1@Manu343726/testing
-    --build=missing --build=clang_headers
-  - conan remove -b -s -f "*"
-  - conan upload clang_headers/6.0.1@Manu343726/testing -r Manu343726 --all --force
-    --retry 3
-  stage: clang_headers
-  tags:
-  - linux
-  - docker
-build_clang_headers_6.0.1_clang7_build_type=Release+shared=True:
-  image: conanio/clang7
-  script:
-  - conan profile update settings.build_type=Release default
-  - CONAN_VERSION_OVERRIDE=6.0.1 conan create --profile=default -o llvm:shared=True
-    -o compiler-rt:shared=True -o clang:shared=True -o llvm_headers:shared=True -o
-    clang_headers:shared=True clang_headers clang_headers/6.0.1@Manu343726/testing
-    --build=missing --build=clang_headers
-  - conan remove -b -s -f "*"
-  - conan upload clang_headers/6.0.1@Manu343726/testing -r Manu343726 --all --force
-    --retry 3
-  stage: clang_headers
-  tags:
-  - linux
-  - docker
-build_clang_headers_6.0.1_gcc5_build_type=Release+shared=False:
-  image: conanio/gcc5
-  script:
-  - conan profile update settings.build_type=Release default
-  - CONAN_VERSION_OVERRIDE=6.0.1 conan create --profile=default -o llvm:shared=False
-    -o compiler-rt:shared=False -o clang:shared=False -o llvm_headers:shared=False
-    -o clang_headers:shared=False clang_headers clang_headers/6.0.1@Manu343726/testing
-    --build=missing --build=clang_headers
-  - conan remove -b -s -f "*"
-  - conan upload clang_headers/6.0.1@Manu343726/testing -r Manu343726 --all --force
-    --retry 3
-  stage: clang_headers
-  tags:
-  - linux
-  - docker
-build_clang_headers_6.0.1_gcc5_build_type=Release+shared=True:
-  image: conanio/gcc5
-  script:
-  - conan profile update settings.build_type=Release default
-  - CONAN_VERSION_OVERRIDE=6.0.1 conan create --profile=default -o llvm:shared=True
-    -o compiler-rt:shared=True -o clang:shared=True -o llvm_headers:shared=True -o
-    clang_headers:shared=True clang_headers clang_headers/6.0.1@Manu343726/testing
-    --build=missing --build=clang_headers
-  - conan remove -b -s -f "*"
-  - conan upload clang_headers/6.0.1@Manu343726/testing -r Manu343726 --all --force
-    --retry 3
-  stage: clang_headers
-  tags:
-  - linux
-  - docker
-build_clang_headers_6.0.1_gcc6_build_type=Release+shared=False:
-  image: conanio/gcc6
-  script:
-  - conan profile update settings.build_type=Release default
-  - CONAN_VERSION_OVERRIDE=6.0.1 conan create --profile=default -o llvm:shared=False
-    -o compiler-rt:shared=False -o clang:shared=False -o llvm_headers:shared=False
-    -o clang_headers:shared=False clang_headers clang_headers/6.0.1@Manu343726/testing
-    --build=missing --build=clang_headers
-  - conan remove -b -s -f "*"
-  - conan upload clang_headers/6.0.1@Manu343726/testing -r Manu343726 --all --force
-    --retry 3
-  stage: clang_headers
-  tags:
-  - linux
-  - docker
-build_clang_headers_6.0.1_gcc6_build_type=Release+shared=True:
-  image: conanio/gcc6
-  script:
-  - conan profile update settings.build_type=Release default
-  - CONAN_VERSION_OVERRIDE=6.0.1 conan create --profile=default -o llvm:shared=True
-    -o compiler-rt:shared=True -o clang:shared=True -o llvm_headers:shared=True -o
-    clang_headers:shared=True clang_headers clang_headers/6.0.1@Manu343726/testing
-    --build=missing --build=clang_headers
-  - conan remove -b -s -f "*"
-  - conan upload clang_headers/6.0.1@Manu343726/testing -r Manu343726 --all --force
-    --retry 3
-  stage: clang_headers
-  tags:
-  - linux
-  - docker
-build_clang_headers_6.0.1_gcc7_build_type=Release+shared=False:
-  image: conanio/gcc7
-  script:
-  - conan profile update settings.build_type=Release default
-  - CONAN_VERSION_OVERRIDE=6.0.1 conan create --profile=default -o llvm:shared=False
-    -o compiler-rt:shared=False -o clang:shared=False -o llvm_headers:shared=False
-    -o clang_headers:shared=False clang_headers clang_headers/6.0.1@Manu343726/testing
-    --build=missing --build=clang_headers
-  - conan remove -b -s -f "*"
-  - conan upload clang_headers/6.0.1@Manu343726/testing -r Manu343726 --all --force
-    --retry 3
-  stage: clang_headers
-  tags:
-  - linux
-  - docker
-build_clang_headers_6.0.1_gcc7_build_type=Release+shared=True:
-  image: conanio/gcc7
-  script:
-  - conan profile update settings.build_type=Release default
-  - CONAN_VERSION_OVERRIDE=6.0.1 conan create --profile=default -o llvm:shared=True
-    -o compiler-rt:shared=True -o clang:shared=True -o llvm_headers:shared=True -o
-    clang_headers:shared=True clang_headers clang_headers/6.0.1@Manu343726/testing
-    --build=missing --build=clang_headers
-  - conan remove -b -s -f "*"
-  - conan upload clang_headers/6.0.1@Manu343726/testing -r Manu343726 --all --force
-    --retry 3
-  stage: clang_headers
-  tags:
-  - linux
-  - docker
-build_clang_headers_6.0.1_gcc8_build_type=Release+shared=False:
-  image: conanio/gcc8
-  script:
-  - conan profile update settings.build_type=Release default
-  - CONAN_VERSION_OVERRIDE=6.0.1 conan create --profile=default -o llvm:shared=False
-    -o compiler-rt:shared=False -o clang:shared=False -o llvm_headers:shared=False
-    -o clang_headers:shared=False clang_headers clang_headers/6.0.1@Manu343726/testing
-    --build=missing --build=clang_headers
-  - conan remove -b -s -f "*"
-  - conan upload clang_headers/6.0.1@Manu343726/testing -r Manu343726 --all --force
-    --retry 3
-  stage: clang_headers
-  tags:
-  - linux
-  - docker
-build_clang_headers_6.0.1_gcc8_build_type=Release+shared=True:
-  image: conanio/gcc8
-  script:
-  - conan profile update settings.build_type=Release default
-  - CONAN_VERSION_OVERRIDE=6.0.1 conan create --profile=default -o llvm:shared=True
-    -o compiler-rt:shared=True -o clang:shared=True -o llvm_headers:shared=True -o
-    clang_headers:shared=True clang_headers clang_headers/6.0.1@Manu343726/testing
+  - CONAN_VERSION_OVERRIDE=6.0.1 conan create --profile=default clang_headers clang_headers/6.0.1@Manu343726/testing
     --build=missing --build=clang_headers
   - conan remove -b -s -f "*"
   - conan upload clang_headers/6.0.1@Manu343726/testing -r Manu343726 --all --force
@@ -10228,167 +10061,12 @@ build_llvm_global_isel_6.0.1_gcc8_build_type=Release+shared=True:
   tags:
   - linux
   - docker
-build_llvm_headers_6.0.1_clang60_build_type=Release+shared=False:
+build_llvm_headers_6.0.1:
   image: conanio/clang60
   script:
   - conan profile update settings.build_type=Release default
-  - CONAN_VERSION_OVERRIDE=6.0.1 conan create --profile=default -o llvm:shared=False
-    -o compiler-rt:shared=False -o clang:shared=False -o llvm_headers:shared=False
-    llvm_headers llvm_headers/6.0.1@Manu343726/testing --build=missing --build=llvm_headers
-  - conan remove -b -s -f "*"
-  - conan upload llvm_headers/6.0.1@Manu343726/testing -r Manu343726 --all --force
-    --retry 3
-  stage: llvm_headers
-  tags:
-  - linux
-  - docker
-build_llvm_headers_6.0.1_clang60_build_type=Release+shared=True:
-  image: conanio/clang60
-  script:
-  - conan profile update settings.build_type=Release default
-  - CONAN_VERSION_OVERRIDE=6.0.1 conan create --profile=default -o llvm:shared=True
-    -o compiler-rt:shared=True -o clang:shared=True -o llvm_headers:shared=True llvm_headers
-    llvm_headers/6.0.1@Manu343726/testing --build=missing --build=llvm_headers
-  - conan remove -b -s -f "*"
-  - conan upload llvm_headers/6.0.1@Manu343726/testing -r Manu343726 --all --force
-    --retry 3
-  stage: llvm_headers
-  tags:
-  - linux
-  - docker
-build_llvm_headers_6.0.1_clang7_build_type=Release+shared=False:
-  image: conanio/clang7
-  script:
-  - conan profile update settings.build_type=Release default
-  - CONAN_VERSION_OVERRIDE=6.0.1 conan create --profile=default -o llvm:shared=False
-    -o compiler-rt:shared=False -o clang:shared=False -o llvm_headers:shared=False
-    llvm_headers llvm_headers/6.0.1@Manu343726/testing --build=missing --build=llvm_headers
-  - conan remove -b -s -f "*"
-  - conan upload llvm_headers/6.0.1@Manu343726/testing -r Manu343726 --all --force
-    --retry 3
-  stage: llvm_headers
-  tags:
-  - linux
-  - docker
-build_llvm_headers_6.0.1_clang7_build_type=Release+shared=True:
-  image: conanio/clang7
-  script:
-  - conan profile update settings.build_type=Release default
-  - CONAN_VERSION_OVERRIDE=6.0.1 conan create --profile=default -o llvm:shared=True
-    -o compiler-rt:shared=True -o clang:shared=True -o llvm_headers:shared=True llvm_headers
-    llvm_headers/6.0.1@Manu343726/testing --build=missing --build=llvm_headers
-  - conan remove -b -s -f "*"
-  - conan upload llvm_headers/6.0.1@Manu343726/testing -r Manu343726 --all --force
-    --retry 3
-  stage: llvm_headers
-  tags:
-  - linux
-  - docker
-build_llvm_headers_6.0.1_gcc5_build_type=Release+shared=False:
-  image: conanio/gcc5
-  script:
-  - conan profile update settings.build_type=Release default
-  - CONAN_VERSION_OVERRIDE=6.0.1 conan create --profile=default -o llvm:shared=False
-    -o compiler-rt:shared=False -o clang:shared=False -o llvm_headers:shared=False
-    llvm_headers llvm_headers/6.0.1@Manu343726/testing --build=missing --build=llvm_headers
-  - conan remove -b -s -f "*"
-  - conan upload llvm_headers/6.0.1@Manu343726/testing -r Manu343726 --all --force
-    --retry 3
-  stage: llvm_headers
-  tags:
-  - linux
-  - docker
-build_llvm_headers_6.0.1_gcc5_build_type=Release+shared=True:
-  image: conanio/gcc5
-  script:
-  - conan profile update settings.build_type=Release default
-  - CONAN_VERSION_OVERRIDE=6.0.1 conan create --profile=default -o llvm:shared=True
-    -o compiler-rt:shared=True -o clang:shared=True -o llvm_headers:shared=True llvm_headers
-    llvm_headers/6.0.1@Manu343726/testing --build=missing --build=llvm_headers
-  - conan remove -b -s -f "*"
-  - conan upload llvm_headers/6.0.1@Manu343726/testing -r Manu343726 --all --force
-    --retry 3
-  stage: llvm_headers
-  tags:
-  - linux
-  - docker
-build_llvm_headers_6.0.1_gcc6_build_type=Release+shared=False:
-  image: conanio/gcc6
-  script:
-  - conan profile update settings.build_type=Release default
-  - CONAN_VERSION_OVERRIDE=6.0.1 conan create --profile=default -o llvm:shared=False
-    -o compiler-rt:shared=False -o clang:shared=False -o llvm_headers:shared=False
-    llvm_headers llvm_headers/6.0.1@Manu343726/testing --build=missing --build=llvm_headers
-  - conan remove -b -s -f "*"
-  - conan upload llvm_headers/6.0.1@Manu343726/testing -r Manu343726 --all --force
-    --retry 3
-  stage: llvm_headers
-  tags:
-  - linux
-  - docker
-build_llvm_headers_6.0.1_gcc6_build_type=Release+shared=True:
-  image: conanio/gcc6
-  script:
-  - conan profile update settings.build_type=Release default
-  - CONAN_VERSION_OVERRIDE=6.0.1 conan create --profile=default -o llvm:shared=True
-    -o compiler-rt:shared=True -o clang:shared=True -o llvm_headers:shared=True llvm_headers
-    llvm_headers/6.0.1@Manu343726/testing --build=missing --build=llvm_headers
-  - conan remove -b -s -f "*"
-  - conan upload llvm_headers/6.0.1@Manu343726/testing -r Manu343726 --all --force
-    --retry 3
-  stage: llvm_headers
-  tags:
-  - linux
-  - docker
-build_llvm_headers_6.0.1_gcc7_build_type=Release+shared=False:
-  image: conanio/gcc7
-  script:
-  - conan profile update settings.build_type=Release default
-  - CONAN_VERSION_OVERRIDE=6.0.1 conan create --profile=default -o llvm:shared=False
-    -o compiler-rt:shared=False -o clang:shared=False -o llvm_headers:shared=False
-    llvm_headers llvm_headers/6.0.1@Manu343726/testing --build=missing --build=llvm_headers
-  - conan remove -b -s -f "*"
-  - conan upload llvm_headers/6.0.1@Manu343726/testing -r Manu343726 --all --force
-    --retry 3
-  stage: llvm_headers
-  tags:
-  - linux
-  - docker
-build_llvm_headers_6.0.1_gcc7_build_type=Release+shared=True:
-  image: conanio/gcc7
-  script:
-  - conan profile update settings.build_type=Release default
-  - CONAN_VERSION_OVERRIDE=6.0.1 conan create --profile=default -o llvm:shared=True
-    -o compiler-rt:shared=True -o clang:shared=True -o llvm_headers:shared=True llvm_headers
-    llvm_headers/6.0.1@Manu343726/testing --build=missing --build=llvm_headers
-  - conan remove -b -s -f "*"
-  - conan upload llvm_headers/6.0.1@Manu343726/testing -r Manu343726 --all --force
-    --retry 3
-  stage: llvm_headers
-  tags:
-  - linux
-  - docker
-build_llvm_headers_6.0.1_gcc8_build_type=Release+shared=False:
-  image: conanio/gcc8
-  script:
-  - conan profile update settings.build_type=Release default
-  - CONAN_VERSION_OVERRIDE=6.0.1 conan create --profile=default -o llvm:shared=False
-    -o compiler-rt:shared=False -o clang:shared=False -o llvm_headers:shared=False
-    llvm_headers llvm_headers/6.0.1@Manu343726/testing --build=missing --build=llvm_headers
-  - conan remove -b -s -f "*"
-  - conan upload llvm_headers/6.0.1@Manu343726/testing -r Manu343726 --all --force
-    --retry 3
-  stage: llvm_headers
-  tags:
-  - linux
-  - docker
-build_llvm_headers_6.0.1_gcc8_build_type=Release+shared=True:
-  image: conanio/gcc8
-  script:
-  - conan profile update settings.build_type=Release default
-  - CONAN_VERSION_OVERRIDE=6.0.1 conan create --profile=default -o llvm:shared=True
-    -o compiler-rt:shared=True -o clang:shared=True -o llvm_headers:shared=True llvm_headers
-    llvm_headers/6.0.1@Manu343726/testing --build=missing --build=llvm_headers
+  - CONAN_VERSION_OVERRIDE=6.0.1 conan create clang_headers clang_headers/6.0.1@Manu343726/testing
+    --profile=default --build=missing --build=llvm_headers
   - conan remove -b -s -f "*"
   - conan upload llvm_headers/6.0.1@Manu343726/testing -r Manu343726 --all --force
     --retry 3
